freest/test/prog/Valid/Functional/MultipleParens/MultipleParens.fst
module MultipleParens where

parens : Int
parens = (((2+4)-(3-1))+1)+2-(1+6)

main : ()
main = print parens
